--- a/Maturaarbeit.tex
+++ b/Maturaarbeit.tex
@@ -6,6 +6,7 @@
 \usepackage[ngerman]{babel}
 \usepackage[latin1]{inputenc}
 \usepackage{blindtext}
+\usepackage{graphicx}
 
 %minimale page header & footer
 \usepackage{fancyhdr}
@@ -22,12 +23,10 @@
 \usepackage[toc]{glossaries}
 
 
-\newglossaryentry{computer}
+\newglossaryentry{glossar}
 {
-  name=computer,
-  description={is a programmable machine that receives input,
-               stores and manipulates data, and provides
-               output in a useful format}
+  name=Glossar,
+  description={Im Glossar werden Fachausdrücke und Abkürzungen erklärt}
 }
 \newglossaryentry{blahblah}
 {
@@ -42,26 +41,49 @@
 \tableofcontents
 
 \chapter{Einleitung}
-\section{Thema}
-\blindtext
-\chapter{Einführung}
-\section{Vorraussetzungen}
-In dieser Arbeit setze ich ein wenig Vorwissen voraus. Dazu gehört....
+\section{Warum \LaTeX{}}
+Der Hauptgrund \LaTeX{} zu verwenden ist, damit man sich auf den Inhalt der Arbeit konzentrieren kann. Wie das ganze am Schluss aussehen soll, überlässt man dem Programm. Je weniger eigene konkrete Vorstellungen vom Layout man mitbringt, desto einfacher wird es.
+
+\chapter{Voraussetzungen}
+\section{Vorwissen}
+Um mit \LaTeX{} zu arbeiten, ist wenig Vorwissen notwendig. Allerdings sollte die Bereitschaft vorhanden sein, auch mal einen Blick ins Handbuch zu werfen, und wenn das nicht weiterhilft, Google nach der Lösung zu fragen.
+
+\section{Ein wenig Text}
 \blindtext
 
-\section{Grundlagen}
-\subsection{Die ganz elementaren Sachen}
-Hier wird's beschrieben. Was weniger elementar ist, steht in Abschnitt \ref{etwaswenigerElementar} auf Seite \pageref{etwaswenigerElementar}.
+\chapter{Grundlagen}
+\section{Kapitel und Unterkapitel}
+\label{kapitelunterkapitel}
+Mit \textbackslash chapter und \textbackslash section, bzw. \textbackslash subsection und \textbackslash subsubsection erstellt man Kapitel.
+
+Abschnitte werden erzeugt, indem man einfach eine leere Zeile einfügt. Um
+Zeilenumbrüche muss man sich nicht kümmern, diese entstehen automatisch.
+
+\section{Abbildung}
+Eine Abbildung ist auch mit ein paar Zeilen eingefügt. Die Abbildungen werden auch automatisch nummeriert. Lena's Bild ist Abbildung \ref{lena}.
+\begin{figure}
+\begin{center}
+\includegraphics[width=0.9\textwidth]{lena.jpg}
+\caption{Lena ist eins der Standardbilder aus der Bildverarbeitung}
+\label{lena}
+\end{center}
+\end{figure}
+
 \blindtext
-\subsection{Ein paar weniger elementare Sachen}
-\label{etwaswenigerElementar}
+\section{Verweise}
+Mit \textbackslash ref und \textbackslash pageref können Verweise auf andere Kapitel bzw. Seiten erstellt werden. \emph{Kapitel und Unterkapitel} ist Kapitel \ref{kapitelunterkapitel} auf Seite \pageref{kapitelunterkapitel}.
 
 \blindtext[2]
 
+\chapter{Für Fortgeschrittene}
+\section{Das Glossar}
+Im \gls{glossar} werden Fachausdrücke und Abkürzungen erklärt. Und hier noch ein weiterer Glossar-Eintrag: \gls{blahblah}
 
-
-\subsection{Und noch das Glossar}
-Die Ausdrücke \gls{computer} und \gls{blahblah} kommen im Glossar vor.
+Gemeinerweise kann \LaTeX{} das Glossar nicht ganz alleine erstellen, es ist auf das externe Programm \emph{makeindex} angewiesen, um einen Index zu erzeugen. Dieses wird über die Kommanozeile aufgerufen. Für diese Arbeit habe ich den Index mit
+\\ \\
+makeindex -s Maturaarbeit.ist -t Maturaarbeit.glg -o Maturaarbeit.gls Maturaarbeit.glo
+\\ \\
+erzeugt und anschliessend \LaTeX{} noch zweimal laufen lassen.
 
 \printglossary[nonumberlist,title=Glossar]
 
