--- a/Maturaarbeit.tex
+++ b/Maturaarbeit.tex
@@ -4,7 +4,7 @@
 \title{Mein Maturaarbeitsthema}
 
 \usepackage[ngerman]{babel}
-\usepackage[latin1]{inputenc}
+\usepackage[utf8]{inputenc}
 \usepackage{blindtext}
 \usepackage{graphicx}
 
@@ -26,7 +26,7 @@
 \newglossaryentry{glossar}
 {
   name=Glossar,
-  description={Im Glossar werden Fachausdrücke und Abkürzungen erklärt}
+  description={Im Glossar werden FachausdrÃ¼cke und AbkÃ¼rzungen erklÃ¤rt}
 }
 \newglossaryentry{blahblah}
 {
@@ -42,11 +42,11 @@
 
 \chapter{Einleitung}
 \section{Warum \LaTeX{}}
-Der Hauptgrund \LaTeX{} zu verwenden ist, damit man sich auf den Inhalt der Arbeit konzentrieren kann. Wie das ganze am Schluss aussehen soll, überlässt man dem Programm. Je weniger eigene konkrete Vorstellungen vom Layout man mitbringt, desto einfacher wird es.
+Der Hauptgrund \LaTeX{} zu verwenden ist, damit man sich auf den Inhalt der Arbeit konzentrieren kann. Wie das ganze am Schluss aussehen soll, Ã¼berlÃ¤sst man dem Programm. Je weniger eigene konkrete Vorstellungen vom Layout man mitbringt, desto einfacher wird es.
 
 \chapter{Voraussetzungen}
 \section{Vorwissen}
-Um mit \LaTeX{} zu arbeiten, ist wenig Vorwissen notwendig. Allerdings sollte die Bereitschaft vorhanden sein, auch mal einen Blick ins Handbuch zu werfen, und wenn das nicht weiterhilft, Google nach der Lösung zu fragen.
+Um mit \LaTeX{} zu arbeiten, ist wenig Vorwissen notwendig. Allerdings sollte die Bereitschaft vorhanden sein, auch mal einen Blick ins Handbuch zu werfen, und wenn das nicht weiterhilft, Google nach der LÃ¶sung zu fragen.
 
 \section{Ein wenig Text}
 \blindtext
@@ -56,11 +56,11 @@ Um mit \LaTeX{} zu arbeiten, ist wenig Vorwissen notwendig. Allerdings sollte di
 \label{kapitelunterkapitel}
 Mit \textbackslash chapter und \textbackslash section, bzw. \textbackslash subsection und \textbackslash subsubsection erstellt man Kapitel.
 
-Abschnitte werden erzeugt, indem man einfach eine leere Zeile einfügt. Um
-Zeilenumbrüche muss man sich nicht kümmern, diese entstehen automatisch.
+Abschnitte werden erzeugt, indem man einfach eine leere Zeile einfÃ¼gt. Um
+ZeilenumbrÃ¼che muss man sich nicht kÃ¼mmern, diese entstehen automatisch.
 
 \section{Abbildung}
-Eine Abbildung ist auch mit ein paar Zeilen eingefügt. Die Abbildungen werden auch automatisch nummeriert. Lena's Bild ist Abbildung \ref{lena}.
+Eine Abbildung ist auch mit ein paar Zeilen eingefÃ¼gt. Die Abbildungen werden auch automatisch nummeriert. Lena's Bild ist Abbildung \ref{lena}.
 \begin{figure}
 \begin{center}
 \includegraphics[width=0.6\textwidth]{lena.jpg}
@@ -71,12 +71,12 @@ Eine Abbildung ist auch mit ein paar Zeilen eingefügt. Die Abbildungen werden au
 
 \blindtext
 \section{Verweise}
-Mit \textbackslash ref und \textbackslash pageref können Verweise auf andere Kapitel bzw. Seiten erstellt werden. \emph{Kapitel und Unterkapitel} ist Kapitel \ref{kapitelunterkapitel} auf Seite \pageref{kapitelunterkapitel}.
+Mit \textbackslash ref und \textbackslash pageref kÃ¶nnen Verweise auf andere Kapitel bzw. Seiten erstellt werden. \emph{Kapitel und Unterkapitel} ist Kapitel \ref{kapitelunterkapitel} auf Seite \pageref{kapitelunterkapitel}.
 
 \blindtext[2]
 
 \section{Literaturverzeichnis}
-Wie Tobias Oetiker \cite{lshort} schreibt, verwendet man \textbackslash cite um Literaturverweise und \textbackslash bibitem um das Literaturverzeichnis zu erstellen. Die \textbackslash bibitem Kommandos können dabei an einem beliebigen Ort, z.B. in einer separaten Datei oder am Ende des Dokuments stehen.
+Wie Tobias Oetiker \cite{lshort} schreibt, verwendet man \textbackslash cite um Literaturverweise und \textbackslash bibitem um das Literaturverzeichnis zu erstellen. Die \textbackslash bibitem Kommandos kÃ¶nnen dabei an einem beliebigen Ort, z.B. in einer separaten Datei oder am Ende des Dokuments stehen.
 
 \begin{thebibliography}{99}
 \bibitem{lshort} T. Oetiker:
@@ -85,11 +85,11 @@ Wie Tobias Oetiker \cite{lshort} schreibt, verwendet man \textbackslash cite um 
 
 
 
-\chapter{Für Fortgeschrittene}
+\chapter{FÃ¼r Fortgeschrittene}
 \section{Das Glossar}
-Im \gls{glossar} werden Fachausdrücke und Abkürzungen erklärt. Und hier noch ein weiterer Glossar-Eintrag: \gls{blahblah}
+Im \gls{glossar} werden FachausdrÃ¼cke und AbkÃ¼rzungen erklÃ¤rt. Und hier noch ein weiterer Glossar-Eintrag: \gls{blahblah}
 
-Gemeinerweise kann \LaTeX{} das Glossar nicht ganz alleine erstellen, es ist auf das externe Programm \emph{makeindex} angewiesen, um einen Index zu erzeugen. Dieses wird über die Kommanozeile aufgerufen. Für diese Arbeit habe ich den Index mit
+Gemeinerweise kann \LaTeX{} das Glossar nicht ganz alleine erstellen, es ist auf das externe Programm \emph{makeindex} angewiesen, um einen Index zu erzeugen. Dieses wird Ã¼ber die Kommanozeile aufgerufen. FÃ¼r diese Arbeit habe ich den Index mit
 \\ \\
 makeindex -s Maturaarbeit.ist -t Maturaarbeit.glg -o Maturaarbeit.gls Maturaarbeit.glo
 \\ \\
